# mlir_testing_cpp

./: CMakeLists.txt
Foo/: CMakeLists.txt
dialect_lib/: CMakeLists.txt  FooDialect.cpp
include/Foo/: CMakeLists.txt  FooDialect.h  FooDialect.td  FooOps.td
src/: main.cpp
